--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           
-            cd /d/async/
+            cd /async/
             
             git checkout main
             
