--- a/.github/workflows/centos.yml
+++ b/.github/workflows/centos.yml
@@ -1,33 +1,3 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@mnhsaki 
-mnhsaki
-/
-async
-Public
-1
-00
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-l CI #14
-Summary
-Workflow file
-Jobs
-deploy
-Workflow file for this run
-.github/workflows/test.yml at 3c14e55
 # This is a basic workflow to help you get started with Actions
 
 name: CI
@@ -46,7 +16,7 @@ jobs:
   # This workflow contains a single job called "build"
   deploy:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
